--- a/reserva.html
+++ b/reserva.html
@@ -91,7 +91,7 @@ checked id="Triple" name="1">
     <input type="submit" value="Enviar">
     <input type="reset" value="Reiniciar" >
 </p>
-<a href="Index.html">Volver a la página principal</a>
+<a href="index.html">Volver a la página principal</a>
 
 
 </body>
